# DemoLang

./: .gitignore  CMakeLists.txt  README.md  doc.md
doc/: architecture.md  code-examples.md  language-syntax.md  quick-start.md
include/: ast.hpp  builtins.hpp  interpreter.hpp  lexer.hpp  parser.hpp  tokens.hpp  utils.hpp
src/: CMakeLists.txt  fileloader.cpp  main.cpp
src/interpreter/: interpreter.cpp  operator_factory.cpp  operators.cpp  singles.cpp
src/lexer/: handlers.cpp  lexer.cpp
src/parser/: operators.cpp  parser.cpp  singles.cpp
tests/: CMakeLists.txt  test_framework.hpp  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_utils.cpp
